force-app/main/default/objects/JobStepExecution__c/JobStepExecution__c.object-meta.xml
<CustomObject>
    <description>Per-step execution record for a pipeline run. Tracks status, async job ID, attempt number, timing, and error details.</description>
    <label>Job Step Execution</label>
    <nameField>
        <displayFormat>STEP-{0000}</displayFormat>
        <label>Step Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Step Executions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>