force-app/main/default/objects/JobStepExecution__c/fields/ApexClassName__c.field-meta.xml
<CustomField>
    <fullName>ApexClassName__c</fullName>
    <description>Apex class name copied from CMT at dispatch time. Preserved for audit even if the CMT record changes later.</description>
    <label>Apex Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>