force-app/main/default/objects/JobStepExecution__c/fields/AsyncApexJobId__c.field-meta.xml
<CustomField>
    <fullName>AsyncApexJobId__c</fullName>
    <description>The AsyncApexJob ID returned by System.enqueueJob or Database.executeBatch. Used by the watchdog to check live status and abort timed-out jobs.</description>
    <label>Async Apex Job ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>