force-app/main/default/objects/JobStepExecution__c/fields/AttemptNumber__c.field-meta.xml
<CustomField>
    <fullName>AttemptNumber__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Execution attempt number. Starts at 1 and increments on each retry. Multiple records with the same step name represent retry history.</description>
    <label>Attempt Number</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>