force-app/main/default/objects/JobStepExecution__c/fields/EndTime__c.field-meta.xml
<CustomField>
    <fullName>EndTime__c</fullName>
    <description>Timestamp when this step execution reached a terminal state.</description>
    <label>End Time</label>
    <type>DateTime</type>
</CustomField>