force-app/main/default/objects/JobStepExecution__c/fields/ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>ErrorMessage__c</fullName>
    <description>Exception message or data error description captured when the step failed.</description>
    <label>Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>