force-app/main/default/objects/JobStepExecution__c/fields/ErrorStackTrace__c.field-meta.xml
<CustomField>
    <fullName>ErrorStackTrace__c</fullName>
    <description>Full Apex stack trace captured from the exception at failure time.</description>
    <label>Error Stack Trace</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>