force-app/main/default/objects/JobStepExecution__c/fields/PipelineRun__c.field-meta.xml
<CustomField>
    <fullName>PipelineRun__c</fullName>
    <description>Parent pipeline run this step execution belongs to.</description>
    <label>Pipeline Run</label>
    <referenceTo>JobPipelineRun__c</referenceTo>
    <relationshipLabel>Step Executions</relationshipLabel>
    <relationshipName>Step_Executions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>