force-app/main/default/objects/JobStepExecution__c/fields/RecordsFailed__c.field-meta.xml
<CustomField>
    <fullName>RecordsFailed__c</fullName>
    <description>Number of records that encountered DML errors. A non-zero value may trigger step failure depending on the job implementation.</description>
    <label>Records Failed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>