force-app/main/default/objects/JobStepExecution__c/fields/RecordsProcessed__c.field-meta.xml
<CustomField>
    <fullName>RecordsProcessed__c</fullName>
    <description>Total records successfully processed. Populated by batch jobs in the finish() method.</description>
    <label>Records Processed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>