force-app/main/default/objects/JobStepExecution__c/fields/StartTime__c.field-meta.xml
<CustomField>
    <fullName>StartTime__c</fullName>
    <description>Timestamp when this step execution was dispatched.</description>
    <label>Start Time</label>
    <type>DateTime</type>
</CustomField>