force-app/main/default/objects/JobStepExecution__c/fields/StepDeveloperName__c.field-meta.xml
<CustomField>
    <fullName>StepDeveloperName__c</fullName>
    <description>DeveloperName of the JobStep__mdt record this execution corresponds to.</description>
    <label>Step Developer Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>